<resources>
    <string name="app_name">Nutritech</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="se_connecter">Se connecter</string>
    <string name="pas_de_compte_cr_ez_en_un">Pas de compte ? Créez-en un !</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="logo">Logo</string>
    <string name="nutritech">Nutritech</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="d_j_enregistr_connectez_vous">Déjà enregistré ? Connectez-vous !</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="confirmez_votre_mot_de_passe">Confirmez votre mot de passe</string>
    <string name="title_activity_dashboard"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bilans_et_r_capitulatifs">Bilans et récapitulatifs</string>
    <string name="tableau_de_bord"> </string>
    <string name="mon_compte">Mon compte</string>
    <string name="taille_en_cm">Taille (en cm)</string>
    <string name="s_enregistrer">S\'enregistrer</string>
    <string name="mon_bilan_hebdomadaire">Mon bilan hebdomadaire</string>
    <string name="mon_bilan_mensuel">Mon bilan mensuel</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="new_poids">Ajoutez un nouveau poids !</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="u_donnez_nous_un_feedback_u"><u>Donnez-nous un feedback !</u></string>
    <string name="chercher_un_aliment">Chercher un aliment</string>
    <string name="rechercher_un_aliment">reChercher un aliment</string>
    <string name="entrez_votre_aliment">Entrez votre aliment</string>
    <string name="real_tableau_de_bord">Tableau de bord</string>
    <string name="title_activity_maps">Map</string>
    <string name="carte_de_ma_consommation">Carte de ma consommation</string>
    <string name="plat_et_ou_ingr_dient">Plat et/ou ingrédient</string>
    <string name="lieu">Lieu</string>
    <string name="calories">Calories</string>
    <string name="aliments_consomm_s">Aliments consommés</string>
    <string name="glucides">Glucides</string>
    <string name="lipides">Lipides</string>
    <string name="prot_ines">Protéines</string>
    <string name="_550_1100_kcal">550 / 1100 kcal</string>
    <string name="calories_consomm_es">Calories consommées :</string>
    <string name="_0_34_g">0 / 34 g</string>
</resources>
