<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/bilans_et_r_capitulatifs">
            <menu>
                <item
                    android:id="@+id/dashboard"
                    android:icon="@drawable/baseline_dashboard_black_18dp"
                    android:title="@string/real_tableau_de_bord" />

                <item
                    android:id="@+id/bilance_hebdo"
                    android:icon="@drawable/baseline_filter_7_black_18dp"
                    android:title="@string/mon_bilan_hebdomadaire" />
                <item
                    android:id="@+id/bilan_mensuel"
                    android:icon="@drawable/baseline_filter_30_black_18dp"
                    android:title="@string/mon_bilan_mensuel" />

            </menu>
        </item>
    </group>

    <item android:title="@string/mon_compte">
        <menu>
            <item
                android:id="@+id/deconnection"
                android:icon="@drawable/baseline_exit_to_app_black_18dp"
                android:title="@string/se_d_connecter" />

        </menu>
    </item>


</menu>
