<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/nomPrenomTxtView"
        android:layout_width="392dp"
        android:layout_height="39dp"
        android:layout_marginBottom="20dp"
        android:text="@string/nav_header_title"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/objectifTxtView"
        android:layout_width="392dp"
        android:layout_height="34dp"
        android:layout_marginBottom="10dp"
        android:text="@string/nav_header_subtitle"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/feedbackTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/u_donnez_nous_un_feedback_u"
        android:textColor="#7AB1FF" />

</LinearLayout>
